--- a/battleship/battleship/battleship.csproj
+++ b/battleship/battleship/battleship.csproj
@@ -42,10 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Players.cs" />
+    <Compile Include="AircraftCarrier.cs" />
+    <Compile Include="Battleship.cs" />
+    <Compile Include="Destroyer.cs" />
+    <Compile Include="Game.cs" />
+    <Compile Include="GameBoard.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Ships.cs" />
+    <Compile Include="ScoreBoard.cs" />
+    <Compile Include="Ship.cs" />
+    <Compile Include="Submarine.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
